# excel_to_csv

./: Cargo.toml  readme.md
src/: cli.rs
tests/: zipcodes.xlsx
