[package]
name = "excel_to_csv"
version = "0.1.0"
authors = ["Robert Pirtle <astropirtle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.2"

[[bin]]
name = "excel_to_csv"
path = "src/cli.rs"
